# OpenGL-3D-Engine

./: CMakeLists.txt  README.md
scripts/: run.ps1
src/: controller.cpp  controller.h  input.cpp  input.h  main.c  main.cpp  model.cpp  model.h  shader.cpp  shader.h  timing.h  view.cpp  view.h
src/resources/: test_frag_shader.glsl  test_vert_shader.glsl
